--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
 
-#logging.level.org.springframework=debug
-#logging.level.org.hibernate=debug
+logging.level.org.springframework=debug
+logging.level.org.hibernate=debug
+logging.level.org.springframework.web.servlet.DispatcherServlet=TRACE
