--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,10 @@ spring.datasource.username=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgresSQLDialect
+
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
 
-logging.level.org.springframework=debug
-logging.level.org.hibernate=debug
-logging.level.org.springframework.web.servlet.DispatcherServlet=TRACE
+#logging.level.org.springframework=debug
+#logging.level.org.hibernate=debug
+#logging.level.org.springframework.web.servlet.DispatcherServlet=TRACE
