--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,17 @@
-spring.application.name=demo
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.password=postgres
-spring.datasource.username=postgres
-spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.application.name=demo
+#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+#spring.datasource.password=postgres
+#spring.datasource.username=postgres
+#spring.datasource.driver-class-name=org.postgresql.Driver
 
 
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=mongoDB
+spring.data.mongodb.uri=mongodb://localhost:27017/mongoDB
 
 spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.hbm2ddl.auto=update
+spring.jpa.properties.hibernate.hbm2ddl.auto=create
 
 #logging.level.org.springframework=debug
 #logging.level.org.hibernate=debug
