--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,12 @@
 #spring.datasource.driver-class-name=org.postgresql.Driver
 
 
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=mongoDB
-spring.data.mongodb.uri=mongodb://localhost:27017/mongoDB
+
+spring.application.name=demo
+spring.datasource.url=jdbc:mysql://mysqldb:3306/mysql_db
+spring.datasource.password=root
+spring.datasource.username=root
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.hbm2ddl.auto=create
@@ -16,3 +18,4 @@ spring.jpa.properties.hibernate.hbm2ddl.auto=create
 #logging.level.org.springframework=debug
 #logging.level.org.hibernate=debug
 #logging.level.org.springframework.web.servlet.DispatcherServlet=TRACE
+
